--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.16"
   }
 }
