--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16"
+    "@headlessui/vue": "^1.7.16",
+    "@vueuse/core": "^10.4.1"
   }
 }
