--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
-    "@vueuse/core": "^10.4.1"
+    "@vueuse/core": "^10.4.1",
+    "vue3-popper": "^1.5.0"
   }
 }
