--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@vercel/analytics": "^1.0.2",
     "@vueuse/core": "^10.4.1",
     "vue3-popper": "^1.5.0"
   }
